# strategy-event-base-game

./: .clang-format  CMakeLists.txt  README.MD
config/: game.json
src/: EconomyState.cpp  EconomyState.h  Game.cpp  Game.h  Main.cpp  UserInput.cpp  UserInput.h
src/board/: Board.cpp  Board.h  Building.cpp  Building.h  BuildingType.h  EnvironmentType.h  Grid.cpp  Grid.h  GridPosition.h  OccupationType.h
src/board/buildings/: Building.cpp  Building.h  BuildingType.h  ResourceFactory.cpp  ResourceFactory.h
src/board/buildings/events/: CreateBuildingHandler.cpp  CreateBuildingHandler.h  CreateRoadHandler.cpp  CreateRoadHandler.h
src/board/characters/: Character.cpp  Character.h  CharacterType.h  SerfCharacter.cpp  SerfCharacter.h
src/board/characters/events/: CreateCharacterHandler.cpp  CreateCharacterHandler.h  GoForResourceHandler.cpp  GoForResourceHandler.h  GoToHandler.cpp  GoToHandler.h  IdleHandler.cpp  IdleHandler.h  SerfStateHandler.h  StoreResourceHandler.cpp  StoreResourceHandler.h
src/board/events/: CreateBuildingHandler.cpp  CreateBuildingHandler.h
src/characters/: Character.cpp  Character.h  CharacterType.h
src/characters/events/: CreateCharacterHandler.cpp  CreateCharacterHandler.h  SerfStateHandler.cpp
src/economy/: EconomyResource.h  EconomyState.cpp  EconomyState.h
src/economy/events/: SpendResourceHandler.cpp  SpendResourceHandler.h
src/events/: Event.cpp  Event.h  EventEntity.cpp  EventEntity.h  EventHandler.cpp  EventHandler.h  EventLoop.cpp  EventLoop.h  EventParams.h  EventQueue.cpp  EventQueue.h  EventStore.cpp  EventStore.h  EventType.h  ScheduledEventQueue.cpp  ScheduledEventQueue.h
src/globals/: Random.cpp  Random.h  Resource.cpp  Resource.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Settings.cpp  Settings.h  Time.cpp  Time.h
src/interface/: BuildingSelector.cpp  BuildingSelector.h  EconomyCell.cpp  EconomyCell.h  EconomyPanel.cpp  EconomyPanel.h  Grid.cpp  Grid.h  GridPosition.h
